--- a/linuxpintos/src/Make.config
+++ b/linuxpintos/src/Make.config
@@ -44,7 +44,7 @@ endif
 
 # Compiler and assembler invocation.
 DEFINES =
-WARNINGS = -Wall -W -Wstrict-prototypes -Wmissing-prototypes -Wsystem-headers
+WARNINGS = #-Wall -W -Wstrict-prototypes -Wmissing-prototypes -Wsystem-headers
 CFLAGS =  -g -msoft-float -O $(CFLAG_STACK_PROTECTOR)
 CPPFLAGS =  -nostdinc -I$(SRCDIR) -I$(SRCDIR)/lib
 ASFLAGS = -Wa,--gstabs
